一些BuG的修复，新增登录页的UI

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.2",
     "element-plus": "^2.13.0",
     "howler": "^2.2.4",
     "lrc-parser": "^1.0.1",
